--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-table": "^7.8.0",
-    "sass": "^1.77.5"
+    "sass": "^1.77.5",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
