--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-spinners": "^0.14.1",
     "react-table": "^7.8.0",
     "sass": "^1.77.5",
     "swiper": "^11.1.14"
