--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-spinners": "^0.14.1",
     "react-table": "^7.8.0",
     "sass": "^1.77.5",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
