--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@stripe/stripe-js": "^4.5.0",
     "6pp": "^1.3.4",
     "axios": "^1.7.2",
+    "button": "^1.1.1",
     "chart.js": "^4.4.3",
     "firebase": "^10.12.2",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
