--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.5.0",
+    "@uploadthing/react": "^7.2.1",
     "6pp": "^1.3.4",
     "axios": "^1.7.2",
     "button": "^1.1.1",
@@ -34,7 +35,8 @@
     "react-to-print": "^3.0.4",
     "sass": "^1.77.5",
     "socket.io-client": "^4.8.1",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "uploadthing": "^7.5.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.13",
